[package]
name = "yral-or-not"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
dotenvy = { version = "0.15.7", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.115"
thiserror = { version = "2.0.12" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
] }
chrono = "0.4"
axum = { version = "0.8.7", optional = true, features = ["macros", "json"] }
log = "0.4.27"
