[package]
name = "yral-multi-services"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = { version = "0.15.7", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.115"
thiserror = { version = "2.0.12" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "http2",
] }
chrono = "0.4"
chrono-tz = "0.10"
log = "0.4.27"
redis = { version = "1.0.2", features = [
    "tokio-rustls-comp",
    "aio",
    "ahash",
    "connection-manager",
    "cluster",
    "cluster-async",
    "acl",
    "sentinel"
] }
axum = { version = "0.8.0", features = ["macros", "json"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tokio = { version = "1.36.0", features = ["full"] }
sentry-tower = { version = "0.37.0", features = ["axum", "axum-matched-path"] }
futures = "0.3.30"
tracing = "0.1"
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "9.0.2", features = ["reqwest", "axum"]}
rustls = { version = "0.23.26" }
candid = "^0.10.10"
jsonwebtoken = { version = "9.3.0", features = ["use_pem"] }
serde_with = "3.7.0"
config = { version = "0.14.0", features = ["toml"] }
once_cell = "1.19.0"
hyper-rustls = { version = "0.27.5", features = [
    "http2",
    "webpki-roots",
    "ring",
] }
yral-identity = { git = "https://github.com/dolr-ai/yral-common.git", default-features = false, branch = "master" }
ic-agent = { version = "0.41.0", default-features = false, features = ["pem"]}